fix payments alignement - hidden scrollbars - etc

--- a/website/static/cssdashboard/stylesheet.css
+++ b/website/static/cssdashboard/stylesheet.css
@@ -13,6 +13,7 @@
         flex-direction: column;
     }
 
+  
     #logout_button{
         padding: 0.25rem;
         border-radius: 2.5%;
@@ -325,7 +326,7 @@
         justify-content: space-evenly;
         width: 100%;
         height: 100%;
-
+        padding: 2rem;
     }
     .payment_card{
         display: flex;
@@ -337,6 +338,15 @@
         width: 20rem;
         height: 28rem
 
+    }
+
+    .payment_card::-webkit-scrollbar, .account_card::-webkit-scrollbar {
+        display: none;
+    }
+
+    .payment_card, .account_card{
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
     }
 
     .past-due{
@@ -370,6 +380,7 @@
         font-size: 1rem;
         font-weight: 300;
         margin-right: 0.25rem;
+        text-transform: uppercase;
     }
 
     .payment_title h6{
@@ -391,7 +402,9 @@
 
     .payment_description{
         height: 2rem;
+        overflow-wrap: break-word;
         overflow-y: scroll;
+        
     }
 
     .payment_subtitle{
@@ -405,7 +418,6 @@
         flex-direction: row;
         justify-content: space-evenly;
         align-items: baseline;
-        padding: 1rem;
     }
 
     .payment_btn button{
@@ -423,6 +435,7 @@
         margin:0px;
         background-color: black;
     }
+
 
     #add_account_modal .modal-dialog .modal-content form .modal-body, #add_recurring_payment_modal .modal-dialog .modal-content form .modal-body, #add_single_payment_modal .modal-dialog .modal-content form .modal-body{
         display: flex;
